junit test updates

--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -59,6 +59,6 @@ th,td{padding:8px 10px; border-bottom:1px solid #eaecef;}
   </div>
 </div>
 
-<div class="footer small">Assignment 6</div>
+<div class="footer small">Calorie Counter App</div>
 </body>
 </html>
